--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/sequelize": "^8.0.0",
+    "@nestjs/websockets": "^8.4.4",
     "@types/filesystem": "^0.0.32",
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
