--- a/package.json
+++ b/package.json
@@ -29,12 +29,15 @@
     "@nestjs/platform-express": "^8.4.4",
     "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/sequelize": "^8.0.0",
+    "@nestjs/swagger": "^5.2.1",
     "@nestjs/websockets": "^8.4.4",
+    "@types/bcrypt": "^5.0.0",
     "@types/filesystem": "^0.0.32",
     "@types/multer": "^1.4.7",
     "@types/mysql": "^2.15.21",
     "@types/uuid": "^8.3.4",
     "async-file": "^2.0.2",
+    "bcrypt": "^5.0.1",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.13.2",
     "file-system": "^2.2.2",
@@ -48,6 +51,7 @@
     "rxjs": "^7.2.0",
     "sequelize": "^6.19.0",
     "sequelize-typescript": "^2.1.3",
+    "swagger-ui-express": "^4.4.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
