--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/jwt": "^8.0.0",
     "@nestjs/passport": "^8.2.1",
     "@nestjs/platform-express": "^8.4.4",
+    "@nestjs/platform-fastify": "^8.4.6",
     "@nestjs/platform-socket.io": "^8.4.4",
     "@nestjs/sequelize": "^8.0.0",
     "@nestjs/swagger": "^5.2.1",
